# DupFinder

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  build.sh  test.sh
scripts/: find_files.fish
src/del_file_list/: main.cc
src/find_dup/: main.cc  search.cc  search.h
